Add: indexes to the music_group table. Fix: table structure.
