# docs/swagger.json
@@ -219,7 +219,7 @@
             }
         },
         "/song/update/{id}": {
-            "patch": {
+            "put": {
                 "description": "update information about a saved song",
                 "consumes": [
                     "application/json"
@@ -246,7 +246,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.SongsResponse"
+                            "$ref": "#/definitions/models.UpdateRequest"
                         }
                     }
                 ],
@@ -292,6 +292,26 @@
                 "group_song": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "release_date": {
+                    "type": "string"
+                },
+                "song": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateRequest": {
+            "type": "object",
+            "properties": {
                 "id": {
                     "type": "integer"
                 },
